--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zmetric",
   "version": "0.1.0",
+  "homepage": "https://zuhlke.github.io/ZMetric/",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
