ci: add deploy step to travis
Added the deploy step to the travis ci file

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -24,7 +26,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "cz-conventional-changelog": "2.1.0"
+    "cz-conventional-changelog": "2.1.0",
+    "gh-pages": "^2.0.1"
   },
   "config": {
     "commitizen": {
