--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ cache:
   directories:
     - node_modules
 script:
-  - npm test
-  - npm run build
+  - yarn test
+  - yarn run deploy
 deploy:
   provider: pages
   skip_cleanup: true
