--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ node_js:
 cache:
   directories:
     - node_modules
+before_install:
+    - git config credential.helper "store --file=.git/credentials"; echo "https://${github_token}:@github.com" > .git/credentials 2>/dev/null
+    - git config --global user.email "YOU@EXAMPLE.COM"
+    - git config --global user.name "Travis CI build agent"
 script:
   - yarn test
   - yarn run deploy
