--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ node_js:
 cache:
   directories:
     - node_modules
-before_install:
+before_script:
     - git config credential.helper "store --file=.git/credentials"; echo "https://${github_token}:@github.com" > .git/credentials 2>/dev/null
-    - git config --global user.email "YOU@EXAMPLE.COM"
+    - git config --global user.email "travis@build.ci"
     - git config --global user.name "Travis CI build agent"
 script:
   - yarn test
