--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ node_js:
 cache:
   directories:
     - node_modules
-before_script:
-    - git config credential.helper "store --file=.git/credentials"; echo "https://${github_token}:@github.com" > .git/credentials 2>/dev/null
-    - git config --global user.email "travis@build.ci"
-    - git config --global user.name "Travis CI build agent"
 script:
   - yarn test
-  - yarn run deploy
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
