--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://zuhlke.github.io/ZMetric/",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
