--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   ],
   "devDependencies": {
     "cz-conventional-changelog": "2.1.0",
-    "gh-pages": "^2.0.1",
-    "semantic-ui-forest-themes": "^1.0.3"
+    "gh-pages": "^2.0.1"
   },
   "config": {
     "commitizen": {
