--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
