ZMETRIC-102 | Added eslint as a part of CI build

--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint src",
     "predeploy": "yarn build",
-    "deploy": "gh-pages  -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
