--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-
 language: node_js
 node_js:
   - "stable"
@@ -8,6 +7,7 @@ cache:
 script:
   - yarn build
   - yarn test
+  - yarn lint
 deploy:
   provider: pages
   skip_cleanup: true
