--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
   - yarn build
   - yarn test-coverage
   - yarn lint
+  - yarn audit
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
 deploy:
