--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - node_modules
 script:
   - yarn build
-  - yarn test
+  - yarn test-coverage
   - yarn lint
 deploy:
   provider: pages
