--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ script:
   - yarn build
   - yarn test-coverage
   - yarn lint
+after_scripts:
+  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
 deploy:
   provider: pages
   skip_cleanup: true
