--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "homepage": "https://zuhlke.github.io/ZMetric/",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "enzyme": "^3.9.0",
+    "jira-client": "^6.7.1",
+    "jira-connector": "^2.10.0",
     "moment": "^2.24.0",
     "prop-types": "latest",
     "react": "^16.8.6",
