--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ cache:
   directories:
     - node_modules
 script:
+  - node scripts/audit.js # yarn audit
   - yarn build
   - yarn test-coverage
   - yarn lint
-  - yarn audit
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
 deploy:
