ZMETRIC-104 | Excluded custom scripts from code coverage

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
       "src/**/*.{js,jsx}",
       "!src/index.js",
       "!src/serviceWorker.js",
-      "!src/setupTests.js"
+      "!src/setupTests.js",
+      "!scripts/*.js"
     ],
     "coverageThreshold": {
       "global": {
