--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
 deploy:
   provider: surge
-  project: ./static/
+  project: ./build/
+  domain: zmetric.surge.sh
   skip_cleanup: true
   keep_history: true
   on:
