--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "surge ./build"
   },
   "browserslist": [
     ">0.2%",
