--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,12 @@ script:
   - yarn lint
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
+before_deploy:
+  - DEPLOY_DOMAIN=https://${TRAVIS_BRANCH}-zmetric.surge.sh
 deploy:
   provider: surge
   project: ./build/
-  domain: zmetric.surge.sh
+  domain: $DEPLOY_DOMAIN
   skip_cleanup: true
   keep_history: true
   on:
