--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,10 @@ script:
   - yarn lint
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
-before_deploy:
-  - DEPLOY_DOMAIN=$(if [ "TRAVIS_BRANCH" == "master" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
 deploy:
   provider: surge
   project: ./build/
-  domain: $DEPLOY_DOMAIN
+  domain: $(if [ "TRAVIS_BRANCH" == "master" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
   skip_cleanup: true
   keep_history: true
   on:
