--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   "devDependencies": {
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "2.1.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "gh-pages": "^2.0.1"
+    "enzyme-adapter-react-16": "^1.11.2"
   },
   "config": {
     "commitizen": {
