ZMETRIC-107 | Run storybook tests as a part of CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ cache:
 script:
   - yarn run audit # customised yarn audit
   - yarn build
+  - yarn run storybook &
+  - sleep 20 # check if storybook is running
   - yarn test-coverage
   - yarn lint
 after_script:
