--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,6 @@ deploy:
   keep_history: true
   on:
     all_branches: true
+addons:
+  artifacts: true
+    working_dir: src/__image_snapshots__/__diff_output__/
