--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ cache:
 script:
   - yarn run audit # customised yarn audit
   - yarn build
-  - yarn run storybook &
-  - sleep 20 # check if storybook is running
-  - yarn test-coverage
+  - yarn test:ci
   - yarn lint
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
