--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "homepage": "https://zmetric.surge.sh",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.4.3",
-    "@storybook/react": "^5.0.8",
-    "babel-loader": "^8.0.5",
-    "enzyme": "^3.9.0",
     "moment": "^2.24.0",
     "prop-types": "latest",
     "react": "^16.8.6",
@@ -44,8 +40,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@storybook/react": "^5.0.8",
     "@storybook/addon-storyshots": "^5.0.8",
     "@storybook/addon-storyshots-puppeteer": "^5.0.8",
+    "babel-loader": "^8.0.5",
+    "enzyme": "^3.9.0",
+    "http-server": "^0.11.1",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "2.1.0",
     "enzyme-adapter-react-16": "^1.11.2",
