ZMETRIC-107 | Rearranged CI steps

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:ci": "yarn storybook:build && yarn storybook:local-server:start && yarn test-coverage && yarn storybook:local-server:stop",
+    "test:ci": "yarn storybook:build && yarn storybook:local-server:start && yarn test:coverage && yarn storybook:local-server:stop",
+    "test:coverage": "yarn test --coverage",
     "audit": "node scripts/audit.js",
-    "test-coverage": "react-scripts test --coverage",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "eject": "react-scripts eject",
     "lint": "eslint src",
