ZMETRIC-107 | Rearranged CI steps

--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "storybook": "yarn semantic-ui && start-storybook -s ./.storybook -p 6006",
     "storybook:build": "yarn semantic-ui && build-storybook -s ./.storybook/",
     "storybook:local-server:start": "http-server --silent -p 6006 storybook-static &",
-    "storybook:local-server:stop": "pkill http-server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:ci": "yarn storybook:build && yarn storybook:local-server:start && yarn test:coverage && yarn storybook:local-server:stop",
+    "test:ci": "yarn storybook:build && yarn storybook:local-server:start && yarn test:coverage",
     "test:coverage": "yarn test --coverage",
     "audit": "node scripts/audit.js",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
