--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ cache:
   directories:
     - node_modules
 script:
+  - yarn test:ci
   - yarn run audit # customised yarn audit
-  - yarn build
-  - yarn test-coverage
   - yarn lint
+  - yarn build
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
 deploy:
@@ -23,3 +23,7 @@ deploy:
   keep_history: true
   on:
     all_branches: true
+#addons:
+#  artifacts:
+#    paths:
+#    - src/__image_snapshots__/__diff_output__/
