--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
+    "request-promise": "^4.2.4",
     "semantic-ui-calendar-react": "^0.14.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
