--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "homepage": "https://zmetric.surge.sh",
   "private": true,
+  "main": "public/electron.js",
   "dependencies": {
     "@babel/runtime": "^7.4.3",
+    "electron-is-dev": "^1.1.0",
+    "expect": "^24.7.1",
     "jira-client": "^6.7.1",
     "moment": "^2.24.0",
     "prop-types": "latest",
@@ -17,9 +20,11 @@
     "request-promise": "^4.2.4",
     "semantic-ui-calendar-react": "^0.14.4",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "storybook-addon-specifications": "^2.1.2"
   },
   "scripts": {
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "semantic-ui": "cp -R ./node_modules/semantic-ui-css ./.storybook/",
     "storybook": "yarn semantic-ui && start-storybook -s ./.storybook -p 6006",
     "storybook:build": "yarn semantic-ui && build-storybook -s ./.storybook/",
@@ -48,12 +53,16 @@
     "@storybook/addon-storyshots-puppeteer": "^5.0.8",
     "@storybook/react": "^5.0.8",
     "babel-loader": "^8.0.5",
+    "concurrently": "^4.1.0",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "2.1.0",
+    "electron": "^4.1.4",
+    "electron-builder": "^20.39.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "http-server": "^0.11.1",
-    "require-context.macro": "^1.0.4"
+    "require-context.macro": "^1.0.4",
+    "wait-on": "^3.2.0"
   },
   "config": {
     "commitizen": {
