--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.4.3",
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
     "jira-client": "^6.7.1",
     "moment": "^2.24.0",
     "prop-types": "latest",
