--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ node_js:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
   - export PATH=$HOME/.yarn/bin:$PATH
-  - echo $TRAVIS_BRANCH
-  - echo $($TRAVIS_BRANCH = "none/master_deployment")
+  - echo TRAVIS CHECK
+  - $(if [ "$TRAVIS_BRANCH" = "none/master_deployment" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
 cache:
   yarn: true
   directories:
