--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ node_js:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
   - export PATH=$HOME/.yarn/bin:$PATH
-  - echo TRAVIS CHECK
-  - $(if [ "$TRAVIS_BRANCH" = "none/master_deployment" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
 cache:
   yarn: true
   directories:
@@ -20,7 +18,7 @@ after_script:
 deploy:
   provider: surge
   project: ./build/
-  domain: $(if [ $"TRAVIS_BRANCH" = "none/master_deployment" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
+  domain: $(if [ "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
   skip_cleanup: true
   keep_history: true
   on:
