--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,25 @@ language: node_js
 node_js:
   - "stable"
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
-  - export PATH=$HOME/.yarn/bin:$PATH
-cache:
-  yarn: true
-  directories:
-    - node_modules
-script:
-  - yarn run audit # customised yarn audit
-  - yarn build
-  - yarn test-coverage
-  - yarn lint
-after_script:
-  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
-deploy:
-  provider: surge
-  project: ./build/
-  domain: $(if [ "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
-  skip_cleanup: true
-  keep_history: true
-  on:
-    all_branches: true
+  - $(if [ "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
+#  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
+#  - export PATH=$HOME/.yarn/bin:$PATH
+#cache:
+#  yarn: true
+#  directories:
+#    - node_modules
+#script:
+#  - yarn run audit # customised yarn audit
+#  - yarn build
+#  - yarn test-coverage
+#  - yarn lint
+#after_script:
+#  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
+#deploy:
+#  provider: surge
+#  project: ./build/
+#  domain: $(if [ "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
+#  skip_cleanup: true
+#  keep_history: true
+#  on:
+#    all_branches: true
