--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "stable"
 before_install:
   - set DOMAIN_NAME=$(if [ "$TRAVIS_BRANCH" = "none/master_deployment" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
-  - echo DOMAIN_NAME
+  - echo $TRAVIS_BRANCH
 #  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
 #  - export PATH=$HOME/.yarn/bin:$PATH
 #cache:
