--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,24 @@ node_js:
 env:
   - DOMAIN_NAME=$(if [ $TRAVIS_BRANCH = "master" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
 before_install:
-  - echo $DOMAIN_NAME
-#  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
-#  - export PATH=$HOME/.yarn/bin:$PATH
-#cache:
-#  yarn: true
-#  directories:
-#    - node_modules
-#script:
-#  - yarn run audit # customised yarn audit
-#  - yarn build
-#  - yarn test-coverage
-#  - yarn lint
-#after_script:
-#  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
-#deploy:
-#  provider: surge
-#  project: ./build/
-#  domain: $DOMAIN_NAME
-#  skip_cleanup: true
-#  keep_history: true
-#  on:
-#    all_branches: true
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
+  - export PATH=$HOME/.yarn/bin:$PATH
+cache:
+  yarn: true
+  directories:
+    - node_modules
+script:
+  - yarn run audit # customised yarn audit
+  - yarn build
+  - yarn test-coverage
+  - yarn lint
+after_script:
+  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
+deploy:
+  provider: surge
+  project: ./build/
+  domain: $DOMAIN_NAME
+  skip_cleanup: true
+  keep_history: true
+  on:
+    all_branches: true
