--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "stable"
+env:
+  - DOMAIN_NAME=$(if [ $TRAVIS_BRANCH = "master" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
   - export PATH=$HOME/.yarn/bin:$PATH
@@ -18,7 +20,7 @@ after_script:
 deploy:
   provider: surge
   project: ./build/
-  domain: $(if [ "TRAVIS_BRANCH" == "master" ]; then echo "https://zmetric.surge.sh"; else echo "https://"$TRAVIS_BRANCH"-zmetric.surge.sh"; fi)
+  domain: $DOMAIN_NAME
   skip_cleanup: true
   keep_history: true
   on:
