--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "0.1.0",
   "homepage": "https://zmetric.surge.sh",
   "private": true,
+  "main": "public/electron.js",
   "dependencies": {
+    "@babel/runtime": "^7.4.3",
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
+    "electron-is-dev": "^1.1.0",
+    "expect": "^24.7.1",
+    "jest-mock-axios": "^2.4.0",
+    "jira-client": "^6.7.1",
     "moment": "^2.24.0",
     "prop-types": "latest",
     "react": "^16.8.6",
@@ -11,11 +19,15 @@
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
     "regression": "^2.0.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "semantic-ui-calendar-react": "^0.14.4",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "storybook-addon-specifications": "^2.1.2"
   },
   "scripts": {
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "semantic-ui": "cp -R ./node_modules/semantic-ui-css ./.storybook/",
     "storybook": "yarn semantic-ui && start-storybook -s ./.storybook -p 6006",
     "storybook:build": "yarn semantic-ui && build-storybook -s ./.storybook/",
@@ -40,16 +52,20 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.4.3",
-    "@storybook/react": "^5.0.8",
-    "@storybook/addon-storyshots": "^5.0.8",
-    "@storybook/addon-storyshots-puppeteer": "^5.0.8",
+    "@storybook/addon-storyshots": "^5.0.10",
+    "@storybook/addon-storyshots-puppeteer": "^5.0.10",
+    "@storybook/react": "^5.0.10",
     "babel-loader": "^8.0.5",
-    "enzyme": "^3.9.0",
-    "http-server": "^0.11.1",
+    "concurrently": "^4.1.0",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "2.1.0",
+    "electron": "^4.1.4",
+    "electron-builder": "^20.39.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "require-context.macro": "^1.0.4"
+    "http-server": "^0.11.1",
+    "require-context.macro": "^1.0.4",
+    "wait-on": "^3.2.0"
   },
   "config": {
     "commitizen": {
@@ -60,9 +76,11 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/index.js",
+      "!src/Actions.js",
       "!src/serviceWorker.js",
       "!src/setupTests.js",
-      "!scripts/*.js"
+      "!scripts/*.js",
+      "!src/**/*.stories.{js,jsx}"
     ],
     "coverageThreshold": {
       "global": {
