--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
   - yarn run audit # customised yarn audit
   - yarn lint
   - yarn build
+  - sonar-scanner
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
 deploy:
@@ -25,7 +26,8 @@ deploy:
   keep_history: true
   on:
     all_branches: true
-#addons:
-#  artifacts:
-#    paths:
-#    - src/__image_snapshots__/__diff_output__/
+addons:
+  sonarcloud:
+    organization: "zuhlke" # the key of the org you chose at step #3
+    token:
+      secure: $SONAR_TOKEN # encrypted value of your token
