--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+os: osx
 node_js:
   - "stable"
 env:
@@ -10,6 +11,8 @@ cache:
   yarn: true
   directories:
     - node_modules
+before_cache:
+  - rm -rf $HOME/.cache/electron-builder/wine
 script:
   - yarn test:ci
   - yarn run audit # customised yarn audit
@@ -17,15 +20,10 @@ script:
   - yarn build
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
+  - # require the branch name to be master (note for PRs this is the base branch name)
 deploy:
-  provider: surge
-  project: ./build/
-  domain: $DOMAIN_NAME
-  skip_cleanup: true
-  keep_history: true
-  on:
-    all_branches: true
-#addons:
-#  artifacts:
-#    paths:
-#    - src/__image_snapshots__/__diff_output__/
+if: branch = master
+- script:
+    - yarn run semantic-release
+    - yarn release
+skip_cleanup: true
