--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,6 @@ typings/
 
 # next.js build output
 .next
-<<<<<<< HEAD
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -80,20 +79,15 @@ typings/
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-=======
-
 # .idea settings
 .idea
 
 # iml file (IJ modules file)
 ZMetric.iml
->>>>>>> 586f4c8dbbeaec9b95678f0187b1ce0cd1763971
 
 
-# Semantic UI css
+
+# Semantic UI csst
 .storybook/semantic-ui-css/
 
 # Storybook diff files
@@ -102,5 +96,5 @@ ZMetric.iml
 # Storybook static build
 /storybook-static/
 
-
+dist
 test-report.xml
