--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+os: osx
 node_js:
   - "stable"
 env:
@@ -10,22 +11,21 @@ cache:
   yarn: true
   directories:
     - node_modules
+before_cache:
+  - rm -rf $HOME/.cache/electron-builder/wine
 script:
   - yarn test:ci
   - yarn run audit # customised yarn audit
   - yarn lint
   - yarn build
   - sonar-scanner
+  - yarn run semantic-release
+  - yarn release
 after_script:
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls # send code coverage to coveralls
-deploy:
-  provider: surge
-  project: ./build/
-  domain: $DOMAIN_NAME
-  skip_cleanup: true
-  keep_history: true
-  on:
-    all_branches: true
+  - # require the branch name to be master (note for PRs this is the base branch name)
+
+
 addons:
   sonarcloud:
     organization: "zuhlke" # the key of the org you chose at step #3
