build(sonar): exclude mocks from sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,6 +18,7 @@ sonar.links.ci=https://travis-ci.com/zuhlke/ZMetric
 sonar.sources=src
 
 sonar.tests=src
+sonar.exclusions=src/__mocks__
 # But we get specific here
 # We don't need to exclude it in sonar.sources because it is automatically taken care of
 sonar.test.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx,src/index.js,src/Actions.js,src/serviceWorker.js,src/setupTests.js,src/**/*.stories.js,src/**/*.stories.jsx
