--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "predeploy": "yarn build",
-    "deploy": "surge ./build"
+    "deploy": "surge ./build",
+    "deploy-electron": "yarn build && electron-builder"
+
   },
   "browserslist": [
     ">0.2%",
