--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "main": "public/electron.js",
   "dependencies": {
     "@babel/runtime": "^7.4.3",
+    "@types/enzyme": "^3.9.3",
+    "@types/jest": "^24.0.13",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.16.0",
     "electron-is-dev": "^1.1.0",
     "expect": "^24.7.1",
     "jest-mock-axios": "^3.0.0",
     "jira-client": "^6.7.1",
+    "json-ts": "^1.6.4",
     "moment": "^2.24.0",
     "prop-types": "latest",
     "react": "^16.8.6",
@@ -44,7 +49,6 @@
     "predeploy": "yarn build",
     "deploy": "surge ./build",
     "deploy-electron": "yarn build && electron-builder"
-
   },
   "browserslist": [
     ">0.2%",
@@ -61,8 +65,8 @@
     "concurrently": "^4.1.0",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "2.1.0",
-    "electron-builder": "^20.40.2",
     "electron": "^5.0.1",
+    "electron-builder": "^20.40.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "http-server": "^0.11.1",
