--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.sources=src
 sonar.tests=src
 # But we get specific here
 # We don't need to exclude it in sonar.sources because it is automatically taken care of
-sonar.test.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx,src/index.js,src/Actions.js,src/serviceWorker.js,src/setupTests.js,src/**/*.stories.js,src/**/*.stories.jsx
+sonar.test.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx,src/**/*.test.ts,src/**/*.test.tsx,src/index.js,src/Actions.js,src/serviceWorker.js,src/setupTests.js,src/**/*.stories.js,src/**/*.stories.jsx
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=./test-report.xml
